2005-01-10  Greg Schaffer  <gschafer@zip.com.au>

	* configure.host (linux targets): Use "${CC} -dumpspecs" instead
	of "${CC} --print-file-name=specs" to appease GCC versions >= 4.0.
	(ia64-*-aix): Delete - this target is obsolete, and would be
	broken by this patch.

2005-01-06  Eric Botcazou  <ebotcazou@libertysurf.fr>

	* configure.host (sparc*-*-solaris2*): Rename into sparc-*-solaris2*.
	(sparc64-sun-solaris2*): New host.

2005-01-06  Paul Brook  <paul@codesourcery.com>

	* Makefie.am: Add earmelf_vxworks.
	* Makefile.in: Regenerate.
	* configure.tgt: Make arm-*-vxworks a separate case.
	* emulparams/armelf_vxworks.sh: New function.

2005-01-06  Alan Modra  <amodra@bigpond.net.au>

	* emultempl/ppc64elf.em (no_multi_toc): New var.
	(gld${EMULATION_NAME}_finish): Pass to ppc64_elf_setup_section_lists.
	(OPTION_NO_MULTI_TOC): Define.
	(PARSE_AND_LIST_LONGOPTS): Add --no-multi-toc support.
	(PARSE_AND_LIST_OPTIONS, PARSE_AND_LIST_ARGS_CASES): Likewise.

2005-01-05  Nick Clifton  <nickc@redhat.com>

	PR binutils/614
	* ldmisc.c (vfinfo): Alter output to conform to the GNU Coding
	Standard's specification for parsable error messages.

2005-01-04  Paul Brook  <paul@codesourcery.com>

	* Makefile.am: Correct dependency for earmsymbian.c.
	* Makefile.in: Regenerate.

2004-12-28  Danny Smith  <dannysmith@users.sourceforge.net>

	* emultempl/pe.em (set_pe_subsystem): Change second arg to
	lang_add_entry to FALSE.

2004-12-23  Nick Clifton  <nickc@redhat.com>

	PR 600
	* emulparams/shelf.sh (.stack): Increase stack start address to
	0x300000.

2004-12-20  Nick Clifton  <nickc@redhat.com>

	* ldmain.c (main): Issue an error message if -static and -shared
	are used together.

2004-12-17  Jakub Jelinek  <jakub@redhat.com>

	* ldexp.h (exp_data_seg): Add min_base and maxpagesize fields.
	* ldexp.c (fold_binary) <case DATA_SEGMENT_ALIGN>: Initialize them.
	* ldlang.c (lang_size_sections): Use them to avoid wasting virtual